[tool.poetry]
name = "fastapi-llm"
version = "0.1.0"
description = ""
authors = ["Daniel Besen de Aguiar <daniel.bdaguiar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
ollama = "*"


[tool.poetry.group.dev.dependencies]
uvicorn = "^0.27.0.post1"
ruff = "*"
mypy = "*"
pre-commit = "*"


[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-cov = "*"
httpx = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
